--- a/package.json
+++ b/package.json
@@ -13,21 +13,10 @@
   ],
   "bin": {},
   "dependencies": {
-    "body-parser": "",
-    "cors": "^2.5.0",
-    "express": "^4.9.8",
     "haxfred-irc": "haxiom/haxfred-irc",
-    "open": "",
-    "request": "^2.46.0",
-    "sequelize": "^2.0.0-rc2",
-    "sequelize-restful": "^0.3.0",
-    "sequelize-sqlite": "^1.7.0"
+    "request": "^2.46.0"
   },
   "engines": {
     "node": "*"
-  },
-  "devDependencies": {
-    "jquery": "^2.1.1",
-    "jsdom": "^1.0.3"
   }
 }
